test_suite/tests/ui/enum-representation/untagged-and-internal.stderr
error: enum cannot be both untagged and internally tagged
 --> $DIR/untagged-and-internal.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

